[package]
name = "fezzlkcli"
version = "0.1.0"
edition = "2018"
authors = ["fezzlk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0.43"
reqwest = "0.11.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = { version = "0.2", features = ["full"] }